NO-TASK Article 관련 로직 일부 수정